--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ plugins {
 	id 'org.springframework.boot' version '2.4.3'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'war' //
+	id 'lenala.azure.azurewebapp' version '1.0' //
+	id "org.gretty" version "3.0.4" //
 }
 
 group = 'ronick'
@@ -11,7 +14,6 @@ sourceCompatibility = '11'
 repositories {
 	mavenCentral()
 }
-//access token: vllhdkuxms6edm4imtcrszgmv6x333kqwpesd7jgbq2qhxv3c3za
 
 
 dependencies {
@@ -21,8 +23,29 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // jpa, jdbc 다 포함
 	runtimeOnly 'mysql:mysql-connector-java'
-}
 
-test {
-	useJUnitPlatform()
+	providedCompile 'javax.servlet:javax.servlet-api:3.1.0'//
+}
+sourceCompatibility = '1.8'//
+targetCompatibility = '1.8'//
+
+azureWebApp {
+	resourceGroup = 'server-ProjectLimbo'
+	appName = 'server-web-spring'
+	pricingTier = 'F1'
+	region = 'limbo'
+	appService = {
+		type = 'windows'
+		javaWebContainer = 'tomcat 8.5'
+		javaVersion = '1.8'
+	}
+	authentication = {
+		type = 'azurecli'
+	}
+	deployment = {
+		type = 'war'
+	}
+	test {
+		useJUnitPlatform()
+	}
 }
