--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'war' //
-	id 'lenala.azure.azurewebapp' version '1.0' //
-	id "org.gretty" version "3.0.4" //
+	//id 'lenala.azure.azurewebapp' version '1.0' //
+	//id "org.gretty" version "3.0.4" //
 }
 
 group = 'ronick'
@@ -15,7 +15,6 @@ repositories {
 	mavenCentral()
 }
 
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -24,11 +23,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // jpa, jdbc 다 포함
 	runtimeOnly 'mysql:mysql-connector-java'
 
-	providedCompile 'javax.servlet:javax.servlet-api:3.1.0'//
+	//providedCompile 'javax.servlet:javax.servlet-api:3.1.0'//
 }
 sourceCompatibility = '1.8'//
 targetCompatibility = '1.8'//
-
+/*
 azureWebApp {
 	resourceGroup = 'server-ProjectLimbo'
 	appName = 'server-web-spring'
@@ -48,4 +47,4 @@ azureWebApp {
 	test {
 		useJUnitPlatform()
 	}
-}
+}*/
