--- a/.github/workflows/main_test-spring-web-server.yml
+++ b/.github/workflows/main_test-spring-web-server.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: '11'
+        distribution: 'adopt'
 
     - name: Build with Gradle # Maven
       run: ./gradlew build #  mvn clean install
