--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'war' //
-	//id 'lenala.azure.azurewebapp' version '1.0' //
-	//id "org.gretty" version "3.0.4" //
+	id 'lenala.azure.azurewebapp' version '1.0' //
+	id "org.gretty" version "3.0.4" //
 }
 
 group = 'ronick'
@@ -27,7 +27,7 @@ dependencies {
 }
 sourceCompatibility = '1.8'//
 targetCompatibility = '1.8'//
-/*
+
 azureWebApp {
 	resourceGroup = 'server-ProjectLimbo'
 	appName = 'server-web-spring'
@@ -47,4 +47,4 @@ azureWebApp {
 	test {
 		useJUnitPlatform()
 	}
-}*/
+}
