--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // jpa, jdbc 다 포함
 	runtimeOnly 'mysql:mysql-connector-java'
 
-	//providedCompile 'javax.servlet:javax.servlet-api:3.1.0'//
+	providedCompile 'javax.servlet:javax.servlet-api:3.1.0'//
 }
 sourceCompatibility = '1.8'//
 targetCompatibility = '1.8'//
