--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.4.3'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
-	id 'war' // **
+	id 'war' // ** 배포에 중요
 	//id 'lenala.azure.azurewebapp' version '1.0' //
 	//id "org.gretty" version "3.0.4" //
 }
