--- a/.github/workflows/main_test-spring-web-server.yml
+++ b/.github/workflows/main_test-spring-web-server.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: 'build/libs' #'${{ github.workspace }}/target/*.war'
+          path: 'build/libs' #'${{ github.workspace }}/target/*.war' test
 
   deploy:
     runs-on: windows-latest
