--- a/.github/workflows/main_test-spring-web-server.yml
+++ b/.github/workflows/main_test-spring-web-server.yml
@@ -14,21 +14,22 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Java version
-      uses: actions/setup-java@v1
-      with:
-        java-version: '8'
+      - name: Set up Java version
+        uses: actions/setup-java@v1
+        with:
+          java-version: '8'
+          distribution: 'adopt'
 
-    - name: Build with Maven
-      run: mvn clean install
+      - name: Build with Gradle # Maven
+        run: ./gradlew build #  mvn clean install
 
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v2
-      with:
-        name: java-app
-        path: '${{ github.workspace }}/target/*.war'
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v2
+        with:
+          name: java-app
+          path: 'build/libs' #'${{ github.workspace }}/target/*.war' test
 
   deploy:
     runs-on: windows-latest
@@ -38,16 +39,16 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v2
-      with:
-        name: java-app
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v2
+        with:
+          name: java-app
 
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'test-spring-web-server'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_c067b48ba921460b892e2788938d8d47 }}
-        package: '*.war'
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'test-spring-web-server'
+          slot-name: 'production'
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_d349dee07ffb481ab0099732e0eaba5d }}
+          package: '*.war'
