--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'war' // ** 배포에 중요
-	//id 'lenala.azure.azurewebapp' version '1.0' //
-	//id "org.gretty" version "3.0.4" //
+	//id 'lenala.azure.azurewebapp' version '1.0' // azure cli set up
 }
 
 group = 'server-ProjectLimbo' //
@@ -23,14 +22,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // jpa, jdbc 다 포함
 	runtimeOnly 'mysql:mysql-connector-java'
 
-
-	//providedCompile 'javax.servlet:javax.servlet-api:3.1.0'//
+	//providedCompile 'javax.servlet:javax.servlet-api:3.1.0'// azure cli set up
 
 }
+
 //sourceCompatibility = '1.8'//
 //targetCompatibility = '1.8'//
+
 /*
-azureWebApp {
+azureWebApp { // azure cli set up
 	resourceGroup = 'server-ProjectLimbo'
 	appName = 'server-web-spring'
 	pricingTier = 'F1'
