--- a/.github/workflows/main_server-web-spring.yml
+++ b/.github/workflows/main_server-web-spring.yml
@@ -28,7 +28,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: java-app
-        path: '${{ github.workspace }}/target/*.war'
+        path: 'build/lib' #'${{ github.workspace }}/target/*.war'
 
   deploy:
     runs-on: windows-latest
