--- a/.github/workflows/main_server-web-spring.yml
+++ b/.github/workflows/main_server-web-spring.yml
@@ -38,8 +38,8 @@ jobs:
       # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
       # Restoring these files from a GitHub Actions cache might cause problems for future builds.
       run: |
-        rm -f ~/.gradle/caches/modules-2/modules-2.lock
-        rm -f ~/.gradle/caches/modules-2/gc.properties
+        rm -Filter ~/.gradle/caches/modules-2/modules-2.lock
+        rm -Filter ~/.gradle/caches/modules-2/gc.properties
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
