--- a/.github/workflows/main_server-web-spring.yml
+++ b/.github/workflows/main_server-web-spring.yml
@@ -21,14 +21,14 @@ jobs:
       with:
         java-version: '11'
 
-    - name: Build with Maven
-      run: mvn clean install
+    - name: Build with Gradle
+      run: ./gradlew build
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
       with:
         name: java-app
-        path: '${{ github.workspace }}/target/*.war'
+        path: 'build/libs'
 
   deploy:
     runs-on: windows-latest
