--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'war' // ** 배포에 중요
-	//id 'lenala.azure.azurewebapp' version '1.0' // azure cli set up
+	id 'lenala.azure.azurewebapp' version '1.0' // azure cli set up
 }
 
 group = 'server-ProjectLimbo' //
@@ -26,10 +26,9 @@ dependencies {
 
 }
 
-//sourceCompatibility = '1.8'//
-//targetCompatibility = '1.8'//
+sourceCompatibility = '1.8'//
+targetCompatibility = '1.8'//
 
-/*
 azureWebApp { // azure cli set up
 	resourceGroup = 'server-ProjectLimbo'
 	appName = 'server-web-spring'
@@ -50,4 +49,4 @@ azureWebApp { // azure cli set up
 		useJUnitPlatform()
 	}
 }
-*/
+
